public enum Indice {
    NOIR,
    BLANC,
    VIDE
}
