package mastermind;

public class ViewEnd {
}
